syntax = "proto3";


package wcity;

option java_multiple_files = true;
option java_package = "io.grpc.wcity.profiles";
option java_outer_classname = "ProfilesProto";
option objc_class_prefix = "RPC";

service Profiles{

    rpc CreateUser(UserRequestP) returns (UserResponseP);
    rpc GetUser(UserRequestP) returns (UserResponseP);
    rpc UpdateUser(UserRequestP) returns (UserResponseP);
    rpc CreateCity(CityRequestP) returns  (CityResponseP);
    rpc CreatePlace(PlaceRequestP) returns (PlaceResponseP);
    rpc UpdateCity(CityRequestP) returns (CityResponseP);
    rpc UpdatePlace(PlaceRequestP) returns (PlaceResponseP);
    rpc GetCity(CityRequestP) returns (CityResponseP);
    //  request only need : email, token,name,city and country in request
    rpc GetPlace(PlaceRequestP) returns (PlaceResponseP);
    rpc VisitCity(VisitCityRequestP) returns (VisitCityResponseP);
    rpc VisitPlace(VisitPlaceRequestP) returns (VisitPlaceResponseP);
    rpc GetVisitedCitys(VisitedRequestP) returns (VisitedCitysResponseP);
    rpc GetVisitedPlaces(VisitedRequestP) returns (VisitedPlacesResponseP);
    // reques only need email,tokem, city name and city coutry
    rpc GetCityPlaces(CityRequestP) returns (VisitedPlacesResponseP);


}
message GeolocationP{
    float lon = 1;
    float lat = 2;
}
message UserRequestP{
    string token = 1;
    string email = 2;
    string name = 3;
    string description = 4;
}
message UserResponseP{
    bool valid = 1;
    string email = 2;
    string name = 3;
    string description = 4;
}
message CityRequestP{
    string token =1;
    string name = 2;
    string country =3;
    string creatorEmail = 4;
    string description = 5;
    GeolocationP location =6;
}
message CityResponseP{
    bool valid =1;
    string name = 2;
    string country =3;
    string creatorEmail = 4;
    string description = 5;
    GeolocationP location =6;
}
message PlaceRequestP{
    string token  = 1;
    string name = 2;
    string city = 3;
    string country =4;
    string creatorEmail =5;
    string description =6;
    GeolocationP location =7;
}
message PlaceResponseP{
    bool valid  = 1;
    string name = 2;
    string city = 3;
    string country =4;
    string creatorEmail =5;
    string description =6;
    GeolocationP location =7;
}
message VisitCityRequestP{
    string token = 1;
    string email = 2;
    string cityName = 3;
    string cityCountry = 4;
}
message VisitCityResponseP{
    bool valid = 1;
    string email = 2;
    string cityName = 3;
    string cityCountry = 4;
}
message VisitPlaceRequestP{
    string token = 1;
    string email = 2;
    string placeName = 3;
    string placeCity = 4;
    string placeCountry = 5;
}
message VisitPlaceResponseP{
    bool  valid = 1;
    string email = 2;
    string placeName = 3;
    string placeCity = 4;
    string placeCountry = 5;
}
message VisitedRequestP{
    string token = 1;
    string email =2;
}
message VisitedCitysResponseP{
    bool valid =1;
    string email = 2;
    repeated CityResponseP citys = 3;
}
message VisitedPlacesResponseP{
    bool valid =1;
    string email =2;
    repeated PlaceResponseP places =3;
}
