syntax = "proto3";


package wcity;

option java_multiple_files = true;
option java_package = "io.grpc.wcity.profilesDB";
option java_outer_classname = "ProfilesDBProto";
option objc_class_prefix = "RPC";

service ProfilesDB{
    rpc CreateUser(CreateUserRequestPDB) returns (CreateUserResponsePDB);
    rpc GetUser(GetUserRequestPDB) returns (UserResponsePDB);
    rpc CreateCity(CityPDB) returns (CityResponsePDB);
    rpc CreatePlaceRequest(PlacePDB) returns (PlaceResponsePDB);
    rpc GetCity(CityRequestPDB) returns (CityPDB);
    rpc GetPlace(PlaceRequestPDB) returns (PlacePDB);
    rpc VisitCity(VisitCityRequestPDB) returns (VisitCityResponsePDB);
    rpc VisitPlace(VisitPlaceRequestPDB) returns (VisitPlaceResponsePDB);
    rpc GetVisitedCitys(VisitedCitysRequestPDB) returns (VisitedCitysResponsePDB);
    rpc GetVisitedPlaces(VisitedPlacesRequestPDB) returns (VisitedPlacesResponsePDB);
    rpc UpdateUserRequest(CreateUserRequestPDB) returns (CreateUserResponsePDB);
    rpc UpdateCityRequest(CityPDB) returns (CityResponsePDB);
    rpc UpdatePlaceRequest(PlacePDB) returns (PlaceResponsePDB);
    rpc GetCityPlaces(CityRequestPDB) returns (VisitedPlacesResponsePDB);
    
}
message CreateUserRequestPDB{
     string email = 1;
     string name = 2;
     string description =3;
}
message CreateUserResponsePDB{
    string email =1 ;
    string valied = 2;
}
message GetUserRequestPDB{
    string email = 2;
}
message UserResponsePDB{
     string email = 1;
     string name = 2;
     string description =3;
     repeated CityMinPDB visitedCitys = 4;
     repeated PlaceMinPDB visitedPlaces = 5;
}
message CityMinPDB{
    string name = 1;
    string country = 2;
    string creatorEmail = 3;
}
message CityPDB{
    string name = 1;
    string country = 2;
    string creatorEmail = 3;
    GeolocationPDB location = 4;
    string description = 5;
    repeated PlaceMinPDB places = 6;
    int32 id = 7;
}
message CityRequestPDB{
    string name = 1;
    string country = 2;
}
message CityResponsePDB{
    string name = 1;
    string country = 2;
    bool valid = 3;
    CityPDB city = 4;
    int32 id = 5;
}
message GeolocationPDB{
    float lon = 1;
    float lat = 2;
}
message PlaceMinPDB{
    string name = 1;
    string city = 2; 
    string country = 3; 
    string creatorEmail = 4;
}
message PlacePDB{
    string name = 1;
    string city = 2;
    string country = 3;
    string creatorEmail = 4;
    GeolocationPDB location = 5;
    string description = 6;
    int32 id = 7;
} 
message PlaceRequestPDB{
    string name = 1;
    string city = 2;
    string country = 3;
}
message PlaceResponsePDB{
    string name =1;
    string city =2;
    string country =3;
    bool valid = 4;
    PlacePDB place =5;
    int32 id = 6;

}
message UpdatedUserRequestPDB{
    string email = 1;
    string name = 2;
    string description = 3; 
}
message VisitedCitysRequestPDB{
    string email = 1;
}

message VisitedCitysResponsePDB{
    string email = 1;
    repeated CityPDB citys= 2;
}
message VisitCityRequestPDB{
    string email = 1;
    string cityName = 2;
    string cityCountry =3;
}
message VisitCityResponsePDB{
    string email = 1;
    string cityName = 2;
    string cityCountry =3;
    bool valid = 4;
}
message CityPlacesRequestPDB{
    string cityName = 1;
    string cityCountry = 2;
}
message CityPlacesResponsePDB{
    string cityName = 1;
    string cityCountry = 2;
    bool valid = 3;
    repeated PlacePDB places = 4;
}
message VisitPlaceRequestPDB{
    string email = 1;
    string placeName = 2;
    string placeCity = 3;
    string placeCountry = 4;
}
message VisitPlaceResponsePDB{
    string email = 1;
    string placeName =2;
    string placeCity =3;
    string placeCountry = 4;
    bool valid = 5;
}
message VisitedPlacesRequestPDB{
    string email =1;
}
message VisitedPlacesResponsePDB{
    string email = 1;
    repeated PlacePDB places =2;
}
